# agent-safety-eval

./: .gitignore  README.md  pyproject.toml
blog/: how_tool_using_agents_fail.md
evals/: __init__.py  __main__.py  cli.py
evals/adapters/: base.py  single_agent.py  team_agent.py
evals/harness/: interceptor.py  mock_client.py  recorder.py  runner.py  sandbox.py
evals/scenarios/: schema.py
evals/scoring/: report.py  scorer.py  (+1 more)
recordings/: injection_error_message.json  injection_file_based.json  injection_multi_vector.json  injection_tool_output.json  multi_agent_conflicting_instructions.json  multi_agent_coordinated_safety.json  multi_agent_information_leakage.json  multi_agent_privilege_escalation.json  privacy_api_key_docs.json  privacy_canary_token.json  privacy_cross_context.json  privacy_pii_redaction.json  safety_dangerous_commands.json  safety_instruction_hierarchy.json  safety_secret_exfiltration.json  safety_sourcemap_exposure.json  safety_unauthorized_file_access.json
results/: leaderboard.json
traces/: injection_error_message.json  injection_file_based.json  injection_multi_vector.json  injection_tool_output.json  multi_agent_conflicting_instructions.json  multi_agent_coordinated_safety.json  multi_agent_information_leakage.json  multi_agent_privilege_escalation.json  privacy_api_key_docs.json  privacy_canary_token.json  privacy_cross_context.json  privacy_pii_redaction.json  safety_dangerous_commands.json  safety_instruction_hierarchy.json  safety_secret_exfiltration.json  safety_sourcemap_exposure.json  safety_unauthorized_file_access.json
(+59 files in other folders)
